exports[`ToggleButton should render a default toggle-button 1`] = `
<div
  class="button">
  <button
    aria-disabled="false"
    aria-expanded="false"
    class="button default"
    type="button">
    <div
      class="arrange">
      <div
        class="fit center">
        <span
          class="icon">
          <svg
            aria-hidden="true"
            class="terra-Icon is-bidi"
            data-name="Layer 1"
            focusable="false"
            height="1em"
            viewbox="0 0 48 48"
            width="1em"
            xmlns="http://www.w3.org/2000/svg">
            <path
              d="M37.7 24L14.2 48l-3.9-3.8L30 24 10.3 3.8 14.2 0z" />
          </svg>
        </span>
      </div>
      <div
        class="fill center">
        <span
          class="button-text">
          Show
        </span>
      </div>
      <div
        class="fit center" />
    </div>
  </button>
  <div
    aria-hidden="true"
    class="toggle" />
</div>
`;

exports[`ToggleButton should render an animated toggle-button 1`] = `
<div
  class="button">
  <button
    aria-disabled="false"
    aria-expanded="false"
    class="button default"
    type="button">
    <div
      class="arrange">
      <div
        class="fit center">
        <span
          class="icon">
          <svg
            aria-hidden="true"
            class="terra-Icon is-bidi"
            data-name="Layer 1"
            focusable="false"
            height="1em"
            viewbox="0 0 48 48"
            width="1em"
            xmlns="http://www.w3.org/2000/svg">
            <path
              d="M37.7 24L14.2 48l-3.9-3.8L30 24 10.3 3.8 14.2 0z" />
          </svg>
        </span>
      </div>
      <div
        class="fill center">
        <span
          class="button-text">
          Show
        </span>
      </div>
      <div
        class="fit center" />
    </div>
  </button>
  <div
    aria-hidden="true"
    class="toggle">
    <div
      aria-hidden="false"
      class="rah-static"
      style="height:0px;overflow:hidden;">
      <div>
        Test
      </div>
    </div>
  </div>
</div>
`;

exports[`ToggleButton should render an icon only toggle-button 1`] = `
<div
  class="button">
  <button
    aria-disabled="false"
    aria-expanded="false"
    aria-label="Show"
    class="button default"
    type="button">
    <span
      class="icon">
      <svg
        aria-hidden="true"
        class="terra-Icon is-bidi"
        data-name="Layer 1"
        focusable="false"
        height="1em"
        viewbox="0 0 48 48"
        width="1em"
        xmlns="http://www.w3.org/2000/svg">
        <path
          d="M37.7 24L14.2 48l-3.9-3.8L30 24 10.3 3.8 14.2 0z" />
      </svg>
    </span>
  </button>
  <div
    aria-hidden="true"
    class="toggle" />
</div>
`;

exports[`ToggleButton should render an initially open toggle-button 1`] = `
<div
  class="button is-open">
  <button
    aria-disabled="false"
    aria-expanded="true"
    class="button default"
    type="button">
    <div
      class="arrange">
      <div
        class="fit center">
        <span
          class="icon">
          <svg
            aria-hidden="true"
            class="terra-Icon is-bidi"
            data-name="Layer 1"
            focusable="false"
            height="1em"
            viewbox="0 0 48 48"
            width="1em"
            xmlns="http://www.w3.org/2000/svg">
            <path
              d="M37.7 24L14.2 48l-3.9-3.8L30 24 10.3 3.8 14.2 0z" />
          </svg>
        </span>
      </div>
      <div
        class="fill center">
        <span
          class="button-text">
          Show
        </span>
      </div>
      <div
        class="fit center" />
    </div>
  </button>
  <div
    aria-hidden="false"
    class="toggle">
    Test
  </div>
</div>
`;

exports[`ToggleButton should render an open toggle-button when clicked 1`] = `
<ToggleButton
  closedButtonText="Show"
  icon={
    <IconChevronRight
      className=""
      data-name="Layer 1"
      isBidi={true}
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg" />
  }
  isAnimated={false}
  isIconAnimated={false}
  isIconOnly={false}
  isInitiallyOpen={false}>
  <div
    className="button is-open">
    <Button
      aria-expanded={true}
      isBlock={false}
      isCompact={false}
      isDisabled={false}
      isReversed={false}
      onClick={[Function]}
      type="button"
      variant="default">
      <button
        aria-disabled={false}
        aria-expanded={true}
        className="button default"
        disabled={false}
        onClick={[Function]}
        type="button">
        <Arrange
          align="center"
          fill={
            <span
              className="button-text">
              Show
            </span>
          }
          fitStart={
            <span
              className="icon">
              <IconChevronRight
                className=""
                data-name="Layer 1"
                isBidi={true}
                viewBox="0 0 48 48"
                xmlns="http://www.w3.org/2000/svg" />
            </span>
          }>
          <div
            className="arrange">
            <div
              className="fit center">
              <span
                className="icon">
                <IconChevronRight
                  className=""
                  data-name="Layer 1"
                  isBidi={true}
                  viewBox="0 0 48 48"
                  xmlns="http://www.w3.org/2000/svg">
                  <IconBase
                    ariaLabel={null}
                    className=""
                    data-name="Layer 1"
                    focusable={false}
                    height="1em"
                    isBidi={true}
                    isSpin={false}
                    viewBox="0 0 48 48"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg">
                    <svg
                      aria-hidden="true"
                      className="terra-Icon is-bidi"
                      data-name="Layer 1"
                      focusable={false}
                      height="1em"
                      viewBox="0 0 48 48"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg">
                      <path
                        d="M37.7 24L14.2 48l-3.9-3.8L30 24 10.3 3.8 14.2 0z" />
                    </svg>
                  </IconBase>
                </IconChevronRight>
              </span>
            </div>
            <div
              className="fill center">
              <span
                className="button-text">
                Show
              </span>
            </div>
            <div
              className="fit center" />
          </div>
        </Arrange>
      </button>
    </Button>
    <Toggle
      isAnimated={false}
      isOpen={true}>
      <div
        aria-hidden={false}
        className="toggle">
        Test
      </div>
    </Toggle>
  </div>
</ToggleButton>
`;

exports[`ToggleButton should set icon prop correctly 1`] = `
<div
  className="button">
  <Button
    aria-expanded={false}
    isBlock={false}
    isCompact={false}
    isDisabled={false}
    isReversed={false}
    onClick={[Function]}
    type="button"
    variant="default">
    <Arrange
      align="center"
      fill={
        <span
          className="button-text">
          Show
        </span>
      }
      fitStart={
        <span
          className="icon">
          <IconChevronRight
            className=""
            data-name="Layer 1"
            isBidi={true}
            viewBox="0 0 48 48"
            xmlns="http://www.w3.org/2000/svg" />
        </span>
      } />
  </Button>
  <Toggle
    isAnimated={false}
    isOpen={false}>
    Test
  </Toggle>
</div>
`;

exports[`ToggleButton should set icon prop correctly with custom icon 1`] = `
<div
  className="button">
  <Button
    aria-expanded={false}
    isBlock={false}
    isCompact={false}
    isDisabled={false}
    isReversed={false}
    onClick={[Function]}
    type="button"
    variant="default">
    <Arrange
      align="center"
      fill={
        <span
          className="button-text">
          Show
        </span>
      }
      fitStart={
        <span
          className="icon">
          <IconCaretRight
            className=""
            isBidi={true}
            viewBox="0 0 48 48"
            xmlns="http://www.w3.org/2000/svg" />
        </span>
      } />
  </Button>
  <Toggle
    isAnimated={false}
    isOpen={false}>
    Test
  </Toggle>
</div>
`;
